// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recommendation regression personas > advanced_openrc_preference: Advanced + OpenRC preference 1`] = `
[
  "alpine",
  "artix",
  "gentoo",
  "almalinux",
  "arch",
]
`;

exports[`recommendation regression personas > advanced_rolling_system_preferences: Advanced + rolling + system preferences 1`] = `
[
  "arch",
  "cachyos",
  "endeavouros",
  "garuda",
  "manjaro",
]
`;

exports[`recommendation regression personas > beginner_gaming_nvidia_easy: Beginner + gaming + NVIDIA + wants easy 1`] = `
[
  "bazzite",
  "deepin",
  "elementary_os",
  "fedora_kinoite",
  "fedora_silverblue",
]
`;

exports[`recommendation regression personas > beginner_old_hardware_low_friction: Beginner + old hardware + low friction 1`] = `
[
  "linux_lite",
  "linux_mint",
  "lmde",
  "lubuntu",
  "mageia",
]
`;

exports[`recommendation regression personas > intermediate_privacy_fixed: Intermediate + privacy + fixed release 1`] = `
[
  "pureos",
  "tails",
  "trisquel",
]
`;

exports[`recommendation regression personas > laptop_low_friction: Laptop + low friction 1`] = `
[
  "bazzite",
  "deepin",
  "elementary_os",
  "fedora_kinoite",
  "fedora_silverblue",
]
`;

exports[`recommendation regression personas > privacy_daily_driver_security: Privacy daily-driver security 1`] = `
[
  "parrot",
  "pureos",
  "qubes_os",
  "tails",
  "trisquel",
]
`;

exports[`recommendation regression personas > server_low_friction: Server-focused + low friction 1`] = `
[
  "fedora",
  "opensuse_leap",
  "opensuse_microos",
  "ubuntu",
  "bazzite",
]
`;
